Lobby: Fix margin on mobile

--- a/game/app/styles/game/lobby.css
+++ b/game/app/styles/game/lobby.css
@@ -27,6 +27,7 @@
 
 .col {
   margin-top: 0;
+  margin-bottom: var(--spacing-lg);
 }
 
 @media (min-width: 68rem) {
